# Logger

./: CHANGELOG.md  LICENSE.md  README.md  TODO.md
.github/: FUNDING.yml
.github/workflows/: c_test.yml  cpp_test.yml  go_test.yml  java.yml  java_test.yml  kotlin.yml  kotlin_test.yml  python.yml  python_test.yml
.github/workflows/tests/: java.yml  kotlin.yml  python.yml
C/: CMakeLists.txt
C++/: CMakeLists.txt  README.md
C++/logger/: Logger.cpp  Logger.hpp
C++/test/: BasicTest1.cpp  ThreadTest1.cpp  ThreadTest2.cpp  main.cpp  test.h  utils.h
C/logger/: logger.c  logger.h
C/test/: BasicTest1.c  ThreadTest1.c  ThreadTest2.c  main.c  test.h  utils.h
Go/logger/: logger.go  loggerColor.go  loggerOption.go  loggerType.go
Go/test/: BasicTest1.go  Test.go  ThreadTest1.go  ThreadTest2.go  go.mod  main.go  utils.go
Java/: .gitignore  jar.sh
Java/logger/: Logger.java
Java/logger/enums/: LoggerColor.java
Java/test/: BasicTest1.java  LoggerTest.java  Main.java  Test.java  ThreadTest1.java  ThreadTest2.java  Utils.java  run.bat  run.sh
Kotlin/: jar.sh
Kotlin/logger/: Logger.kt
Kotlin/logger/enums/: LoggerColor.kt  LoggerOption.kt  LoggerType.kt
Kotlin/test/: BasicTest1.kt  Test.kt  ThreadTest1.kt  ThreadTest2.kt  main.kt  run.bat  run.ps1  run.sh  utils.kt
Python/: .env
Python/logger/: Logger.py  __init__.py
Python/test/: main.py
logger/: Logger.java
logger/enums/: LoggerOption.java  LoggerType.java
